--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"mongoose": "^8.10.1"
 	},
 	"devDependencies": {
+		"@types/cookie-parser": "^1.4.8",
+		"@types/cors": "^2.8.17",
+		"@types/express": "^5.0.0",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.3"
 	}
