--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/cookie-parser": "^1.4.8",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.0",
+		"@types/node": "^22.13.4",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.3"
 	}
