--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"dependencies": {
+		"bcryptjs": "^3.0.0",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.7",
 		"ejs": "^3.1.10",
 		"express": "^4.21.2",
-		"mongoose": "^8.10.1"
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.10.1",
+		"nodemailer": "^6.10.0",
+		"validator": "^13.12.0"
 	},
 	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
 		"@types/cookie-parser": "^1.4.8",
 		"@types/cors": "^2.8.17",
+		"@types/ejs": "^3.1.5",
 		"@types/express": "^5.0.0",
+		"@types/jsonwebtoken": "^9.0.8",
 		"@types/node": "^22.13.4",
+		"@types/nodemailer": "^6.4.17",
+		"@types/validator": "^13.12.2",
 		"tsx": "^4.19.2",
 		"typescript": "^5.7.3"
 	}
